--- a/views/movieList.html
+++ b/views/movieList.html
@@ -1,4 +1,4 @@
-      <input type="text" ng-model="movieTitle" ng-change="changeLoader(); writeTitle(movieTitle)" ng-model-options="{ debounce: 500 }">
+      <input placeholder="search for a movie" class="centered-content main-input extra-big-size" type="text" ng-model="movieTitle" ng-change="changeLoader(); writeTitle(movieTitle)" ng-model-options="{ debounce: 500 }">
       <div ng-show="showLoader" class="loader-container">
       	  <div class="ball"></div>
     		  <div class="ball"></div>
