--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,219 +1,379 @@
-@import "https://fonts.googleapis.com/css?family=EB+Garamond|Roboto:300,400,400i,700,900";
-/* line 12, ../scss/main.scss */
+@import "https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i,700,700i|Ubuntu:400,500,700";
+/* line 13, ../scss/main.scss */
 p {
-  font-family: 'Roboto', sans-serif;
-  color: #666666; }
+  font-family: 'Ubuntu', sans-serif;
+  color: #333333;
+}
 
-/* line 16, ../scss/main.scss */
+/* line 17, ../scss/main.scss */
 .small-size {
-  font-size: 12px; }
+  font-size: 12px;
+}
 
-/* line 19, ../scss/main.scss */
+/* line 20, ../scss/main.scss */
 .medium-size {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
-/* line 22, ../scss/main.scss */
+/* line 23, ../scss/main.scss */
 .big-size {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
-/* line 25, ../scss/main.scss */
+/* line 26, ../scss/main.scss */
 .extra-big-size {
-  font-size: 30px; }
+  font-size: 30px;
+}
 
-/* line 28, ../scss/main.scss */
+/* line 29, ../scss/main.scss */
+.regular {
+  font-weight: 400;
+}
+
+/* line 32, ../scss/main.scss */
+.bold {
+  font-weight: 600;
+}
+
+/* line 35, ../scss/main.scss */
 .wrapper {
   max-width: 1100px;
   margin: 0 auto;
-  width: 100%; }
+  width: 100%;
+}
 
-/* line 33, ../scss/main.scss */
+/* line 40, ../scss/main.scss */
 .col-6 {
-  width: 50%; }
+  width: 50%;
+}
 
-/* line 36, ../scss/main.scss */
+/* line 43, ../scss/main.scss */
 .centered-content {
   margin: 0 auto;
   text-align: center;
-  display: block; }
+  display: block;
+}
 
-/* line 41, ../scss/main.scss */
+/* line 48, ../scss/main.scss */
+a {
+  text-decoration: none;
+}
+
+/* line 51, ../scss/main.scss */
 ul {
-  max-width: 600px;
-  width: 80%; }
+  padding: 0;
+}
 
-/* line 45, ../scss/main.scss */
+/* line 54, ../scss/main.scss */
 li {
-  background: #ededed none repeat scroll 0 0;
-  clear: both;
-  height: 200px;
   list-style: outside none none;
-  padding: 20px;
-  width: 100%; }
+}
 
-/* line 53, ../scss/main.scss */
-img {
-  float: left;
-  height: 100%;
-  width: auto;
-  max-width: 50%; }
-
-/* line 59, ../scss/main.scss */
+/* line 57, ../scss/main.scss */
 .main-title {
-  color: #666666;
-  font-family: "EB Garamond", serif;
-  font-size: 70px;
+  color: black;
+  font-family: "Gentium Book Basic", serif;
+  font-size: 5em;
+  font-weight: 400;
   text-align: center;
-  text-transform: uppercase; }
-  /* line 65, ../scss/main.scss */
-  .main-title span {
-    position: relative; }
-    /* line 67, ../scss/main.scss */
-    .main-title span::before {
-      background-image: url("../images/satrap.png");
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      bottom: -10px;
-      content: "";
-      display: block;
-      height: 140px;
-      left: 0;
-      margin: 0 auto;
-      opacity: 0.1;
-      position: absolute;
-      right: 0;
-      width: 160px;
-      z-index: -1; }
+  text-transform: uppercase;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+/* line 67, ../scss/main.scss */
+.main-title span {
+  position: relative;
+  /*
+  Possible satrap image
+  &::before{
+    background-image: url("../images/satrap.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    bottom: -10px;
+    content: "";
+    display: block;
+    height: 140px;
+    left: 0;
+    margin: 0 auto;
+    opacity: 0.1;
+    position: absolute;
+    right: 0;
+    width: 160px;
+    z-index: -1;
+  }
+  */
+}
 
-/* line 86, ../scss/main.scss */
+/* line 91, ../scss/main.scss */
 .main-input {
   width: 100%;
   padding: 5px;
-  border-width: 0 0 1px 0;
-  border-color: #666666;
-  color: #666666; }
-
-/* line 93, ../scss/main.scss */
-.movie-info {
-  color: #444;
-  float: left;
-  font-family: Arial,sans-serif;
-  max-width: 40%;
-  padding: 0 5%; }
+  border: none;
+  background: white;
+  background-bottom: 50px;
+  text-align: left;
+}
 
 /* line 100, ../scss/main.scss */
+.movie-list li {
+  display: block;
+  min-width: 300px;
+  margin: 20px;
+  text-align: left;
+}
+/* line 105, ../scss/main.scss */
+.movie-list li .movie-thumb {
+  width: 130px;
+  height: 200px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #fc2c32;
+  display: inline-block;
+  vertical-align: middle;
+}
+/* line 115, ../scss/main.scss */
+.movie-list li .movie-info {
+  display: inline-block;
+  padding: 20px;
+  font-family: "Gentium Book Basic",serif;
+  text-align: left;
+  vertical-align: middle;
+}
+/* line 121, ../scss/main.scss */
+.movie-list li .movie-info a {
+  color: black;
+  text-decoration: none;
+}
+/* line 125, ../scss/main.scss */
+.movie-list li .movie-info a:hover h2, .movie-list li .movie-info a:hover h3 {
+  background: #fc2c32;
+  color: white;
+}
+
+/* line 134, ../scss/main.scss */
 .loader-container {
   width: 100%;
   height: 100%;
   padding-top: 50px;
-  margin: 0 auto; }
+  margin: 20px auto 50px;
+}
 
-/* line 106, ../scss/main.scss */
+/* line 140, ../scss/main.scss */
 .movie-box {
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 50vh; }
-
-/* line 112, ../scss/main.scss */
-.movie-title {
+  max-width: 960px;
+  margin: 0 auto;
+}
+/* line 143, ../scss/main.scss */
+.movie-box .poster-box {
+  display: inline-block;
+  width: 30%;
+  background: #fc2c32;
+}
+/* line 147, ../scss/main.scss */
+.movie-box .poster-box img {
+  width: 100%;
+}
+/* line 150, ../scss/main.scss */
+.movie-box .poster-box ul {
   color: white;
-  background: rgba(0, 0, 0, 0.5);
-  font-size: 18px; }
+  line-height: 25px;
+  padding: 0 20px;
+  font-size: 14px;
+  font-family: 'Ubuntu', sans-serif;
+}
+/* line 157, ../scss/main.scss */
+.movie-box .poster-box ul li {
+  margin: 8px 0;
+}
+/* line 162, ../scss/main.scss */
+.movie-box .movie-details {
+  display: inline-block;
+  font-family: 'Ubuntu', sans-serif;
+  vertical-align: top;
+  margin-left: 4%;
+  width: 65%;
+}
+/* line 168, ../scss/main.scss */
+.movie-box .movie-details .movie-title {
+  color: black;
+  font-family: 'Gentium Book Basic', serif;
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+/* line 174, ../scss/main.scss */
+.movie-box .movie-details .movie-plot {
+  margin: 20px 0;
+  padding: 0 5px;
+  line-height: 25px;
+}
 
-/* line 117, ../scss/main.scss */
+/* line 181, ../scss/main.scss */
+.back-button-holder {
+  margin: 20px;
+  text-align: right;
+  position: relative;
+}
+/* line 185, ../scss/main.scss */
+.back-button-holder a {
+  color: black;
+  text-decoration: none;
+  font-size: 30px;
+  font-family: 'Gentium Book Basic', serif;
+  padding: 0 10px;
+}
+/* line 191, ../scss/main.scss */
+.back-button-holder a:hover {
+  background-color: #fc2c32;
+  color: white;
+}
+/* line 196, ../scss/main.scss */
+.back-button-holder ::after {
+  background-image: url("../images/satrap.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 100px;
+  opacity: 0.13;
+  position: absolute;
+  right: 0;
+  transform: scaleX(-1);
+  width: 130px;
+  z-index: -1;
+}
+
+/* line 213, ../scss/main.scss */
 .full-width {
   width: 100%;
   padding-left: 20px;
-  padding-right: 20px; }
+  padding-right: 20px;
+}
 
-/* line 122, ../scss/main.scss */
+/* line 218, ../scss/main.scss */
 .ball {
   width: 10px;
   height: 10px;
   margin: 10px auto;
-  border-radius: 50px; }
-  /* line 128, ../scss/main.scss */
-  .ball:nth-child(1) {
-    background: #ff005d;
-    -webkit-animation: right 1s infinite ease-in-out;
-    -moz-animation: right 1s infinite ease-in-out;
-    animation: right 1s infinite ease-in-out; }
-  /* line 135, ../scss/main.scss */
-  .ball:nth-child(2) {
-    background: #35ff99;
-    -webkit-animation: left 1.1s infinite ease-in-out;
-    -moz-animation: left 1.1s infinite ease-in-out;
-    animation: left 1.1s infinite ease-in-out; }
-  /* line 142, ../scss/main.scss */
-  .ball:nth-child(3) {
-    background: #008597;
-    -webkit-animation: right 1.05s infinite ease-in-out;
-    -moz-animation: right 1.05s infinite ease-in-out;
-    animation: right 1.05s infinite ease-in-out; }
-  /* line 149, ../scss/main.scss */
-  .ball:nth-child(4) {
-    background: #ffcc00;
-    -webkit-animation: left 1.15s infinite ease-in-out;
-    -moz-animation: left 1.15s infinite ease-in-out;
-    animation: left 1.15s infinite ease-in-out; }
-  /* line 156, ../scss/main.scss */
-  .ball:nth-child(5) {
-    background: #2d3443;
-    -webkit-animation: right 1.1s infinite ease-in-out;
-    -moz-animation: right 1.1s infinite ease-in-out;
-    animation: right 1.1s infinite ease-in-out; }
-  /* line 163, ../scss/main.scss */
-  .ball:nth-child(6) {
-    background: #ff7c35;
-    -webkit-animation: left 1.05s infinite ease-in-out;
-    -moz-animation: left 1.05s infinite ease-in-out;
-    animation: left 1.05s infinite ease-in-out; }
-  /* line 170, ../scss/main.scss */
-  .ball:nth-child(7) {
-    background: #4d407c;
-    -webkit-animation: right 1s infinite ease-in-out;
-    -moz-animation: right 1s infinite ease-in-out;
-    animation: right 1s infinite ease-in-out; }
+  border-radius: 50px;
+}
+/* line 224, ../scss/main.scss */
+.ball:nth-child(1) {
+  background: #ff005d;
+  -webkit-animation: right 1s infinite ease-in-out;
+  -moz-animation: right 1s infinite ease-in-out;
+  animation: right 1s infinite ease-in-out;
+}
+/* line 231, ../scss/main.scss */
+.ball:nth-child(2) {
+  background: #35ff99;
+  -webkit-animation: left 1.1s infinite ease-in-out;
+  -moz-animation: left 1.1s infinite ease-in-out;
+  animation: left 1.1s infinite ease-in-out;
+}
+/* line 238, ../scss/main.scss */
+.ball:nth-child(3) {
+  background: #008597;
+  -webkit-animation: right 1.05s infinite ease-in-out;
+  -moz-animation: right 1.05s infinite ease-in-out;
+  animation: right 1.05s infinite ease-in-out;
+}
+/* line 245, ../scss/main.scss */
+.ball:nth-child(4) {
+  background: #ffcc00;
+  -webkit-animation: left 1.15s infinite ease-in-out;
+  -moz-animation: left 1.15s infinite ease-in-out;
+  animation: left 1.15s infinite ease-in-out;
+}
+/* line 252, ../scss/main.scss */
+.ball:nth-child(5) {
+  background: #2d3443;
+  -webkit-animation: right 1.1s infinite ease-in-out;
+  -moz-animation: right 1.1s infinite ease-in-out;
+  animation: right 1.1s infinite ease-in-out;
+}
+/* line 259, ../scss/main.scss */
+.ball:nth-child(6) {
+  background: #ff7c35;
+  -webkit-animation: left 1.05s infinite ease-in-out;
+  -moz-animation: left 1.05s infinite ease-in-out;
+  animation: left 1.05s infinite ease-in-out;
+}
+/* line 266, ../scss/main.scss */
+.ball:nth-child(7) {
+  background: #4d407c;
+  -webkit-animation: right 1s infinite ease-in-out;
+  -moz-animation: right 1s infinite ease-in-out;
+  animation: right 1s infinite ease-in-out;
+}
 
 @-webkit-keyframes right {
   0% {
-    -webkit-transform: translate(-15px); }
+    -webkit-transform: translate(-15px);
+  }
   50% {
-    -webkit-transform: translate(15px); }
+    -webkit-transform: translate(15px);
+  }
   100% {
-    -webkit-transform: translate(-15px); } }
+    -webkit-transform: translate(-15px);
+  }
+}
 @-webkit-keyframes left {
   0% {
-    -webkit-transform: translate(15px); }
+    -webkit-transform: translate(15px);
+  }
   50% {
-    -webkit-transform: translate(-15px); }
+    -webkit-transform: translate(-15px);
+  }
   100% {
-    -webkit-transform: translate(15px); } }
+    -webkit-transform: translate(15px);
+  }
+}
 @-moz-keyframes right {
   0% {
-    -moz-transform: translate(-15px); }
+    -moz-transform: translate(-15px);
+  }
   50% {
-    -moz-transform: translate(15px); }
+    -moz-transform: translate(15px);
+  }
   100% {
-    -moz-transform: translate(-15px); } }
+    -moz-transform: translate(-15px);
+  }
+}
 @-moz-keyframes left {
   0% {
-    -moz-transform: translate(15px); }
+    -moz-transform: translate(15px);
+  }
   50% {
-    -moz-transform: translate(-15px); }
+    -moz-transform: translate(-15px);
+  }
   100% {
-    -moz-transform: translate(15px); } }
+    -moz-transform: translate(15px);
+  }
+}
 @keyframes right {
   0% {
-    transform: translate(-15px); }
+    transform: translate(-15px);
+  }
   50% {
-    transform: translate(15px); }
+    transform: translate(15px);
+  }
   100% {
-    transform: translate(-15px); } }
+    transform: translate(-15px);
+  }
+}
 @keyframes left {
   0% {
-    transform: translate(15px); }
+    transform: translate(15px);
+  }
   50% {
-    transform: translate(-15px); }
+    transform: translate(-15px);
+  }
   100% {
-    transform: translate(15px); } }
+    transform: translate(15px);
+  }
+}
