--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,8 +1,9 @@
-@import 'https://fonts.googleapis.com/css?family=EB+Garamond|Roboto:300,400,400i,700,900';
+@import 'https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i,700,700i|Ubuntu:400,500,700';
 
 $max-width: 1100px;
 
-$dark-gray: #666666;
+$red: #fc2c32;
+$dark-gray: #333333;
 $small: 12px;
 $medium: 14px;
 $big: 16px;
@@ -10,7 +11,7 @@ $extra-big: 30px;
 $title-size: 70px;
 
 p{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   color: $dark-gray;
 }
 .small-size{
@@ -25,6 +26,12 @@ p{
 .extra-big-size{
   font-size: $extra-big;
 }
+.regular{
+  font-weight: 400;
+}
+.bold{
+  font-weight: 600;
+}
 .wrapper{
   max-width: $max-width;
   margin: 0 auto;
@@ -38,32 +45,29 @@ p{
   text-align: center;
   display: block;
 }
-ul {
-    max-width: 600px;
-    width: 80%;
+a{
+  text-decoration: none;
+}
+ul{
+  padding: 0;
 }
 li {
-    background: #ededed none repeat scroll 0 0;
-    clear: both;
-    height: 200px;
     list-style: outside none none;
-    padding: 20px;
-    width: 100%;
-}
-img {
-    float: left;
-    height: 100%;
-    width: auto;
-    max-width: 50%;
 }
 .main-title{
-  color: $dark-gray;
-  font-family: "EB Garamond", serif;
-  font-size: 70px;
+  color: black;
+  font-family: "Gentium Book Basic", serif;
+  font-size: 5em;
+  font-weight: 400;
   text-align: center;
   text-transform: uppercase;
+  border-bottom: 1px solid black;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
   span{
     position: relative;
+    /*
+    Possible satrap image
     &::before{
       background-image: url("../images/satrap.png");
       background-position: center center;
@@ -81,38 +85,130 @@ img {
       width: 160px;
       z-index: -1;
     }
+    */
   }
 }
 .main-input{
   width: 100%;
-  padding: 5px; 
-  border-width: 0 0 1px 0;
-  border-color: $dark-gray;
-  color: $dark-gray;
+  padding: 5px;
+  border: none;
+  background: white;
+  background-bottom: 50px;
+  text-align: left;
 }
-.movie-info {
-    color: #444;
-    float: left;
-    font-family: Arial,sans-serif;
-    max-width: 40%;
-    padding: 0 5%;
+.movie-list{
+  li{
+    display: block;
+    min-width: 300px;
+    margin: 20px;
+    text-align: left;
+    .movie-thumb{
+      width: 130px;
+      height: 200px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-color: $red;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .movie-info {
+      display: inline-block;
+      padding: 20px;
+      font-family: "Gentium Book Basic",serif;
+      text-align: left;
+      vertical-align: middle;
+      a{
+        color: black;
+        text-decoration: none;
+        &:hover{
+          h2,h3{
+            background: $red;
+            color: white;
+          }
+        }
+      }
+    }
+  }
 }
 .loader-container {
   width: 100%;
   height: 100%;
   padding-top: 50px;
-  margin: 0 auto;
+  margin: 20px auto 50px;
 }
 .movie-box{
-  
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 50vh;
+  max-width: 960px;
+  margin: 0 auto;
+  .poster-box{
+    display: inline-block;
+    width: 30%;
+    background: $red;
+    img{
+      width: 100%;
+    }
+    ul{
+      color: white;
+      line-height: 25px;
+      padding: 0 20px;
+      font-size: 14px;
+      font-family: 'Ubuntu', sans-serif;
+
+      li{
+        margin: 8px 0;
+      }
+    }
+  }
+  .movie-details {
+    display: inline-block;
+    font-family: 'Ubuntu', sans-serif;
+    vertical-align: top;
+    margin-left: 4%;
+    width: 65%;
+    .movie-title{
+      color: black;
+      font-family: 'Gentium Book Basic', serif;
+      margin: 0 0 5px;
+      font-size: 28px;
+    }
+    .movie-plot{
+      margin: 20px 0;
+      padding: 0 5px;
+      line-height: 25px;
+    }
+  }
 }
-.movie-title{
-  color: white;
-  background: rgba(0,0,0,0.5);
-  font-size: 18px;
+.back-button-holder{
+    margin: 20px;
+    text-align: right;
+    position: relative;
+    a{
+      color: black;
+      text-decoration: none;
+      font-size: 30px;
+      font-family: 'Gentium Book Basic', serif;
+      padding: 0 10px;
+      &:hover{
+          background-color: $red;
+          color: white;
+      }
+    }
+    ::after {
+      background-image: url("../images/satrap.png");
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      bottom: 0;
+      content: "";
+      display: block;
+      height: 100px;
+      opacity: 0.13;
+      position: absolute;
+      right: 0;
+      transform: scaleX(-1);
+      width: 130px;
+      z-index: -1;
+    }
 }
 .full-width{
   width: 100%;
@@ -124,12 +220,12 @@ img {
   height: 10px;
   margin: 10px auto;
   border-radius: 50px;
-     
+
     &:nth-child(1) {
       background: #ff005d;
       -webkit-animation: right 1s infinite ease-in-out;
       -moz-animation: right 1s infinite ease-in-out;
-      animation: right 1s infinite ease-in-out;    
+      animation: right 1s infinite ease-in-out;
     }
 
     &:nth-child(2) {
@@ -154,21 +250,21 @@ img {
      }
 
     &:nth-child(5) {
-      background: #2d3443;  
+      background: #2d3443;
       -webkit-animation: right 1.1s infinite ease-in-out;
       -moz-animation: right 1.1s infinite ease-in-out;
       animation: right 1.1s infinite ease-in-out;
     }
 
     &:nth-child(6) {
-      background: #ff7c35;  
+      background: #ff7c35;
       -webkit-animation: left 1.05s infinite ease-in-out;
       -moz-animation: left 1.05s infinite ease-in-out;
       animation: left 1.05s infinite ease-in-out;
      }
 
     &:nth-child(7) {
-      background: #4d407c;  
+      background: #4d407c;
       -webkit-animation: right 1s infinite ease-in-out;
       -moz-animation: right 1s infinite ease-in-out;
       animation: right 1s infinite ease-in-out;
