--- a/views/movieItem.html
+++ b/views/movieItem.html
@@ -1,13 +1,20 @@
-<div class="movie-box full-width" style="background-image: url({{movie.Poster}})">
-	<p class="movie-title">{{movie.Title}}</p>
-	<ul>	
-		<li>Metascore: {{movie.Metascore}}</li>
-		<li>RottenTomatoes: {{movie.tomatoMeter}}</li>
-	</ul>
-	<div>{{movie.Plot}}</div>
-	<div>Directed by: {{movie.Director}}</div>
-	<div>Written by: {{movie.Writer}}</div>
-	<div>Cast: {{movie.Actors}}</div>
-
+<div class="movie-box full-width">
+	<div class="poster-box">
+		<img ng-src="{{movie.Poster}}" />
+		<ul>
+			<li><span class="bold">Directed by:</span> {{movie.Director}}</li>
+			<li><span class="bold">Written by:</span> {{movie.Writer}}</li>
+			<li><span class="bold">Cast:</span> {{movie.Actors}}</li>
+			<li><span class="bold">Metascore:</span> {{movie.Metascore}}</li>
+			<li><span class="bold">RottenTomatoes:</span> {{movie.tomatoMeter}}</li>
+		</ul>
+	</div>
+	<div class="movie-details">
+		<h2 class="movie-title">{{movie.Title}} <span class="regular big-size">({{movie.Year}})</span></h2>
+		<span class="small-size">{{movie.Genre}} | {{movie.Runtime}}</span>
+		<div class="movie-plot">{{movie.Plot}}</div>
+	</div>
 </div>
-<a href="index.html#/">Back</a>
+<div class="back-button-holder">
+	<a href="index.html#/">Back</a>
+</div>
