--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -170,31 +170,32 @@ li {
 .movie-box .poster-box {
   display: inline-block;
   width: 30%;
-  background: #fc2c32;
 }
-/* line 147, ../scss/main.scss */
+/* line 146, ../scss/main.scss */
 .movie-box .poster-box img {
   width: 100%;
 }
 /* line 150, ../scss/main.scss */
-.movie-box .poster-box ul {
-  color: white;
-  line-height: 25px;
-  padding: 0 20px;
-  font-size: 14px;
-  font-family: 'Ubuntu', sans-serif;
-}
-/* line 157, ../scss/main.scss */
-.movie-box .poster-box ul li {
-  margin: 8px 0;
-}
-/* line 162, ../scss/main.scss */
 .movie-box .movie-details {
   display: inline-block;
   font-family: 'Ubuntu', sans-serif;
   vertical-align: top;
   margin-left: 4%;
   width: 65%;
+}
+/* line 156, ../scss/main.scss */
+.movie-box .movie-details ul {
+  background: #fc2c32 none repeat scroll 0 0;
+  color: white;
+  font-family: "Ubuntu",sans-serif;
+  line-height: 15px;
+  margin-right: 30px;
+  margin-top: 0;
+  padding: 10px 20px;
+}
+/* line 164, ../scss/main.scss */
+.movie-box .movie-details ul li {
+  margin: 8px 0;
 }
 /* line 168, ../scss/main.scss */
 .movie-box .movie-details .movie-title {
@@ -206,7 +207,6 @@ li {
 /* line 174, ../scss/main.scss */
 .movie-box .movie-details .movie-plot {
   margin: 20px 0;
-  padding: 0 5px;
   line-height: 25px;
 }
 
