--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -143,20 +143,8 @@ li {
   .poster-box{
     display: inline-block;
     width: 30%;
-    background: $red;
     img{
       width: 100%;
-    }
-    ul{
-      color: white;
-      line-height: 25px;
-      padding: 0 20px;
-      font-size: 14px;
-      font-family: 'Ubuntu', sans-serif;
-
-      li{
-        margin: 8px 0;
-      }
     }
   }
   .movie-details {
@@ -165,6 +153,18 @@ li {
     vertical-align: top;
     margin-left: 4%;
     width: 65%;
+    ul{
+      background: #fc2c32 none repeat scroll 0 0;
+      color: white;
+      font-family: "Ubuntu",sans-serif;
+      line-height: 15px;
+      margin-right: 30px;
+      margin-top: 0;
+      padding: 10px 20px;
+      li{
+        margin: 8px 0;
+      }
+    }
     .movie-title{
       color: black;
       font-family: 'Gentium Book Basic', serif;
@@ -173,7 +173,7 @@ li {
     }
     .movie-plot{
       margin: 20px 0;
-      padding: 0 5px;
+      
       line-height: 25px;
     }
   }
