--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -2,72 +2,59 @@
 /* line 13, ../scss/main.scss */
 p {
   font-family: 'Ubuntu', sans-serif;
-  color: #333333;
-}
+  color: #333333; }
 
 /* line 17, ../scss/main.scss */
 .small-size {
-  font-size: 12px;
-}
+  font-size: 12px; }
 
 /* line 20, ../scss/main.scss */
 .medium-size {
-  font-size: 14px;
-}
+  font-size: 14px; }
 
 /* line 23, ../scss/main.scss */
 .big-size {
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 /* line 26, ../scss/main.scss */
 .extra-big-size {
-  font-size: 30px;
-}
+  font-size: 30px; }
 
 /* line 29, ../scss/main.scss */
 .regular {
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 /* line 32, ../scss/main.scss */
 .bold {
-  font-weight: 600;
-}
+  font-weight: 600; }
 
 /* line 35, ../scss/main.scss */
 .wrapper {
   max-width: 1100px;
   margin: 0 auto;
-  width: 100%;
-}
+  width: 100%; }
 
 /* line 40, ../scss/main.scss */
 .col-6 {
-  width: 50%;
-}
+  width: 50%; }
 
 /* line 43, ../scss/main.scss */
 .centered-content {
   margin: 0 auto;
   text-align: center;
-  display: block;
-}
+  display: block; }
 
 /* line 48, ../scss/main.scss */
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 /* line 51, ../scss/main.scss */
 ul {
-  padding: 0;
-}
+  padding: 0; }
 
 /* line 54, ../scss/main.scss */
 li {
-  list-style: outside none none;
-}
+  list-style: outside none none; }
 
 /* line 57, ../scss/main.scss */
 .main-title {
@@ -79,32 +66,30 @@ li {
   text-transform: uppercase;
   border-bottom: 1px solid black;
   padding-bottom: 10px;
-  margin-bottom: 20px;
-}
-/* line 67, ../scss/main.scss */
-.main-title span {
-  position: relative;
-  /*
-  Possible satrap image
-  &::before{
-    background-image: url("../images/satrap.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    bottom: -10px;
-    content: "";
-    display: block;
-    height: 140px;
-    left: 0;
-    margin: 0 auto;
-    opacity: 0.1;
-    position: absolute;
-    right: 0;
-    width: 160px;
-    z-index: -1;
-  }
-  */
-}
+  margin-bottom: 20px; }
+  /* line 67, ../scss/main.scss */
+  .main-title span {
+    position: relative;
+    /*
+    Possible satrap image
+    &::before{
+      background-image: url("../images/satrap.png");
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      bottom: -10px;
+      content: "";
+      display: block;
+      height: 140px;
+      left: 0;
+      margin: 0 auto;
+      opacity: 0.1;
+      position: absolute;
+      right: 0;
+      width: 160px;
+      z-index: -1;
+    }
+    */ }
 
 /* line 91, ../scss/main.scss */
 .main-input {
@@ -113,267 +98,241 @@ li {
   border: none;
   background: white;
   background-bottom: 50px;
-  text-align: left;
-}
+  text-align: left; }
 
 /* line 100, ../scss/main.scss */
 .movie-list li {
   display: block;
   min-width: 300px;
   margin: 20px;
-  text-align: left;
-}
-/* line 105, ../scss/main.scss */
-.movie-list li .movie-thumb {
-  width: 130px;
-  height: 200px;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: #fc2c32;
-  display: inline-block;
-  vertical-align: middle;
-}
-/* line 115, ../scss/main.scss */
-.movie-list li .movie-info {
-  display: inline-block;
-  padding: 20px;
-  font-family: "Gentium Book Basic",serif;
-  text-align: left;
-  vertical-align: middle;
-}
-/* line 121, ../scss/main.scss */
-.movie-list li .movie-info a {
-  color: black;
-  text-decoration: none;
-}
-/* line 125, ../scss/main.scss */
-.movie-list li .movie-info a:hover h2, .movie-list li .movie-info a:hover h3 {
-  background: #fc2c32;
-  color: white;
-}
+  text-align: left; }
+  /* line 105, ../scss/main.scss */
+  .movie-list li .movie-thumb {
+    width: 130px;
+    height: 200px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #fc2c32;
+    display: inline-block;
+    vertical-align: middle; }
+  /* line 115, ../scss/main.scss */
+  .movie-list li .movie-info {
+    display: inline-block;
+    padding: 20px;
+    font-family: "Gentium Book Basic",serif;
+    text-align: left;
+    vertical-align: middle; }
+    /* line 121, ../scss/main.scss */
+    .movie-list li .movie-info a {
+      color: black;
+      text-decoration: none; }
+      /* line 125, ../scss/main.scss */
+      .movie-list li .movie-info a:hover h2, .movie-list li .movie-info a:hover h3 {
+        background: #fc2c32;
+        color: white; }
 
 /* line 134, ../scss/main.scss */
 .loader-container {
   width: 100%;
   height: 100%;
   padding-top: 50px;
-  margin: 20px auto 50px;
-}
+  margin: 20px auto 50px; }
 
 /* line 140, ../scss/main.scss */
 .movie-box {
   max-width: 960px;
-  margin: 0 auto;
-}
-/* line 143, ../scss/main.scss */
-.movie-box .poster-box {
-  display: inline-block;
-  width: 30%;
-}
-/* line 146, ../scss/main.scss */
-.movie-box .poster-box img {
-  width: 100%;
-}
-/* line 150, ../scss/main.scss */
-.movie-box .movie-details {
-  display: inline-block;
-  font-family: 'Ubuntu', sans-serif;
-  vertical-align: top;
-  margin-left: 4%;
-  width: 65%;
-}
-/* line 156, ../scss/main.scss */
-.movie-box .movie-details ul {
-  background: #fc2c32 none repeat scroll 0 0;
-  color: white;
-  font-family: "Ubuntu",sans-serif;
-  line-height: 15px;
-  margin-right: 30px;
-  margin-top: 0;
-  padding: 10px 20px;
-}
-/* line 164, ../scss/main.scss */
-.movie-box .movie-details ul li {
-  margin: 8px 0;
-}
-/* line 168, ../scss/main.scss */
-.movie-box .movie-details .movie-title {
-  color: black;
-  font-family: 'Gentium Book Basic', serif;
-  margin: 0 0 5px;
-  font-size: 28px;
-}
-/* line 174, ../scss/main.scss */
-.movie-box .movie-details .movie-plot {
-  margin: 20px 0;
-  line-height: 25px;
-}
+  margin: 0 auto; }
+  /* line 143, ../scss/main.scss */
+  .movie-box::before {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    content: "";
+    display: block;
+    height: 100%;
+    opacity: 0.15;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1; }
+  /* line 157, ../scss/main.scss */
+  .movie-box .poster-box {
+    display: inline-block;
+    width: 30%; }
+    /* line 160, ../scss/main.scss */
+    .movie-box .poster-box img {
+      width: 100%; }
+  /* line 164, ../scss/main.scss */
+  .movie-box .movie-details {
+    display: inline-block;
+    font-family: 'Ubuntu', sans-serif;
+    vertical-align: top;
+    margin-left: 4%;
+    width: 65%; }
+    /* line 170, ../scss/main.scss */
+    .movie-box .movie-details ul {
+      background: #fc2c32 none repeat scroll 0 0;
+      color: white;
+      font-family: "Ubuntu",sans-serif;
+      line-height: 15px;
+      margin-right: 30px;
+      margin-top: 0;
+      padding: 10px 20px; }
+      /* line 178, ../scss/main.scss */
+      .movie-box .movie-details ul li {
+        margin: 8px 0; }
+      /* line 181, ../scss/main.scss */
+      .movie-box .movie-details ul.non-styled-list {
+        background: transparent;
+        color: black;
+        line-height: inherit;
+        padding: 0;
+        display: inline;
+        margin: 0; }
+        /* line 188, ../scss/main.scss */
+        .movie-box .movie-details ul.non-styled-list li {
+          margin: 0;
+          display: inline; }
+    /* line 194, ../scss/main.scss */
+    .movie-box .movie-details .movie-title {
+      color: black;
+      font-family: 'Gentium Book Basic', serif;
+      margin: 0 0 5px;
+      font-size: 28px; }
+    /* line 200, ../scss/main.scss */
+    .movie-box .movie-details .movie-plot {
+      margin: 20px 0;
+      line-height: 25px; }
 
-/* line 181, ../scss/main.scss */
+/* line 207, ../scss/main.scss */
 .back-button-holder {
   margin: 20px;
   text-align: right;
-  position: relative;
-}
-/* line 185, ../scss/main.scss */
-.back-button-holder a {
-  color: black;
-  text-decoration: none;
-  font-size: 30px;
-  font-family: 'Gentium Book Basic', serif;
-  padding: 0 10px;
-}
-/* line 191, ../scss/main.scss */
-.back-button-holder a:hover {
-  background-color: #fc2c32;
-  color: white;
-}
-/* line 196, ../scss/main.scss */
-.back-button-holder ::after {
-  background-image: url("../images/satrap.png");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 100px;
-  opacity: 0.13;
-  position: absolute;
-  right: 0;
-  transform: scaleX(-1);
-  width: 130px;
-  z-index: -1;
-}
+  position: relative; }
+  /* line 211, ../scss/main.scss */
+  .back-button-holder a {
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
+    font-family: 'Gentium Book Basic', serif;
+    padding: 0 10px; }
+    /* line 217, ../scss/main.scss */
+    .back-button-holder a:hover {
+      background-color: #fc2c32;
+      color: white; }
+  /* line 222, ../scss/main.scss */
+  .back-button-holder ::after {
+    background-image: url("../images/satrap.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 100px;
+    opacity: 0.13;
+    position: absolute;
+    right: 0;
+    transform: scaleX(-1);
+    width: 130px;
+    z-index: -1; }
 
-/* line 213, ../scss/main.scss */
+/* line 239, ../scss/main.scss */
 .full-width {
   width: 100%;
   padding-left: 20px;
-  padding-right: 20px;
-}
+  padding-right: 20px; }
 
-/* line 218, ../scss/main.scss */
+/* line 244, ../scss/main.scss */
 .ball {
   width: 10px;
   height: 10px;
   margin: 10px auto;
-  border-radius: 50px;
-}
-/* line 224, ../scss/main.scss */
-.ball:nth-child(1) {
-  background: #ff005d;
-  -webkit-animation: right 1s infinite ease-in-out;
-  -moz-animation: right 1s infinite ease-in-out;
-  animation: right 1s infinite ease-in-out;
-}
-/* line 231, ../scss/main.scss */
-.ball:nth-child(2) {
-  background: #35ff99;
-  -webkit-animation: left 1.1s infinite ease-in-out;
-  -moz-animation: left 1.1s infinite ease-in-out;
-  animation: left 1.1s infinite ease-in-out;
-}
-/* line 238, ../scss/main.scss */
-.ball:nth-child(3) {
-  background: #008597;
-  -webkit-animation: right 1.05s infinite ease-in-out;
-  -moz-animation: right 1.05s infinite ease-in-out;
-  animation: right 1.05s infinite ease-in-out;
-}
-/* line 245, ../scss/main.scss */
-.ball:nth-child(4) {
-  background: #ffcc00;
-  -webkit-animation: left 1.15s infinite ease-in-out;
-  -moz-animation: left 1.15s infinite ease-in-out;
-  animation: left 1.15s infinite ease-in-out;
-}
-/* line 252, ../scss/main.scss */
-.ball:nth-child(5) {
-  background: #2d3443;
-  -webkit-animation: right 1.1s infinite ease-in-out;
-  -moz-animation: right 1.1s infinite ease-in-out;
-  animation: right 1.1s infinite ease-in-out;
-}
-/* line 259, ../scss/main.scss */
-.ball:nth-child(6) {
-  background: #ff7c35;
-  -webkit-animation: left 1.05s infinite ease-in-out;
-  -moz-animation: left 1.05s infinite ease-in-out;
-  animation: left 1.05s infinite ease-in-out;
-}
-/* line 266, ../scss/main.scss */
-.ball:nth-child(7) {
-  background: #4d407c;
-  -webkit-animation: right 1s infinite ease-in-out;
-  -moz-animation: right 1s infinite ease-in-out;
-  animation: right 1s infinite ease-in-out;
-}
+  border-radius: 50px; }
+  /* line 250, ../scss/main.scss */
+  .ball:nth-child(1) {
+    background: #ff005d;
+    -webkit-animation: right 1s infinite ease-in-out;
+    -moz-animation: right 1s infinite ease-in-out;
+    animation: right 1s infinite ease-in-out; }
+  /* line 257, ../scss/main.scss */
+  .ball:nth-child(2) {
+    background: #35ff99;
+    -webkit-animation: left 1.1s infinite ease-in-out;
+    -moz-animation: left 1.1s infinite ease-in-out;
+    animation: left 1.1s infinite ease-in-out; }
+  /* line 264, ../scss/main.scss */
+  .ball:nth-child(3) {
+    background: #008597;
+    -webkit-animation: right 1.05s infinite ease-in-out;
+    -moz-animation: right 1.05s infinite ease-in-out;
+    animation: right 1.05s infinite ease-in-out; }
+  /* line 271, ../scss/main.scss */
+  .ball:nth-child(4) {
+    background: #ffcc00;
+    -webkit-animation: left 1.15s infinite ease-in-out;
+    -moz-animation: left 1.15s infinite ease-in-out;
+    animation: left 1.15s infinite ease-in-out; }
+  /* line 278, ../scss/main.scss */
+  .ball:nth-child(5) {
+    background: #2d3443;
+    -webkit-animation: right 1.1s infinite ease-in-out;
+    -moz-animation: right 1.1s infinite ease-in-out;
+    animation: right 1.1s infinite ease-in-out; }
+  /* line 285, ../scss/main.scss */
+  .ball:nth-child(6) {
+    background: #ff7c35;
+    -webkit-animation: left 1.05s infinite ease-in-out;
+    -moz-animation: left 1.05s infinite ease-in-out;
+    animation: left 1.05s infinite ease-in-out; }
+  /* line 292, ../scss/main.scss */
+  .ball:nth-child(7) {
+    background: #4d407c;
+    -webkit-animation: right 1s infinite ease-in-out;
+    -moz-animation: right 1s infinite ease-in-out;
+    animation: right 1s infinite ease-in-out; }
 
 @-webkit-keyframes right {
   0% {
-    -webkit-transform: translate(-15px);
-  }
+    -webkit-transform: translate(-15px); }
   50% {
-    -webkit-transform: translate(15px);
-  }
+    -webkit-transform: translate(15px); }
   100% {
-    -webkit-transform: translate(-15px);
-  }
-}
+    -webkit-transform: translate(-15px); } }
 @-webkit-keyframes left {
   0% {
-    -webkit-transform: translate(15px);
-  }
+    -webkit-transform: translate(15px); }
   50% {
-    -webkit-transform: translate(-15px);
-  }
+    -webkit-transform: translate(-15px); }
   100% {
-    -webkit-transform: translate(15px);
-  }
-}
+    -webkit-transform: translate(15px); } }
 @-moz-keyframes right {
   0% {
-    -moz-transform: translate(-15px);
-  }
+    -moz-transform: translate(-15px); }
   50% {
-    -moz-transform: translate(15px);
-  }
+    -moz-transform: translate(15px); }
   100% {
-    -moz-transform: translate(-15px);
-  }
-}
+    -moz-transform: translate(-15px); } }
 @-moz-keyframes left {
   0% {
-    -moz-transform: translate(15px);
-  }
+    -moz-transform: translate(15px); }
   50% {
-    -moz-transform: translate(-15px);
-  }
+    -moz-transform: translate(-15px); }
   100% {
-    -moz-transform: translate(15px);
-  }
-}
+    -moz-transform: translate(15px); } }
 @keyframes right {
   0% {
-    transform: translate(-15px);
-  }
+    transform: translate(-15px); }
   50% {
-    transform: translate(15px);
-  }
+    transform: translate(15px); }
   100% {
-    transform: translate(-15px);
-  }
-}
+    transform: translate(-15px); } }
 @keyframes left {
   0% {
-    transform: translate(15px);
-  }
+    transform: translate(15px); }
   50% {
-    transform: translate(-15px);
-  }
+    transform: translate(-15px); }
   100% {
-    transform: translate(15px);
-  }
-}
+    transform: translate(15px); } }
