--- a/views/movieList.html
+++ b/views/movieList.html
@@ -16,7 +16,7 @@
         <p>{{errorMessage}}</p>
       </div>
       <ul class="movie-list centered-content" ng-hide="showLoader">
-        <li ng-repeat="item in movies">
+        <li ng-repeat="item in movies" ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}">
           <a ng-href="index.html#/movie/{{item.id}}">
             <div class="movie-thumb" style="background-image: url('https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{item.poster_path}})"></div>
           </a>
